# pulsar

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.example.yaml  config.yaml  presentation_UI.html  presentation_simple_fa.md  presentation_talk_fa.md  pyproject.toml  sample_tasks.json
.github/workflows/: ci.yaml
cache/: training_tracker.json
cache/timeseries/: 608774621772120063_5.parquet  608774622493540351_5.parquet  608774622527094783_5.parquet  608774622560649215_5.parquet  608774622761975807_5.parquet  608774622795530239_5.parquet  608774622812307455_5.parquet  608774622980079615_5.parquet  608774623030411263_5.parquet  608774623080742911_5.parquet  608774623147851775_5.parquet  608774623198183423_5.parquet  608774623298846719_5.parquet  608774623315623935_5.parquet  608774623332401151_11.parquet  608774623365955583_11.parquet  608774623365955583_5.parquet  608774623416287231_11.parquet  608774623416287231_5.parquet  608774623433064447_11.parquet  608774623433064447_5.parquet  608774623449841663_11.parquet  608774623483396095_11.parquet  608774623483396095_5.parquet  608774623500173311_11.parquet  608774623500173311_5.parquet  608774623516950527_11.parquet  608774623516950527_5.parquet  608774623550504959_5.parquet  608774623567282175_5.parquet  608774623584059391_5.parquet  608774623600836607_11.parquet  608774623600836607_5.parquet  608774681800998911_5.parquet  608774682136543231_11.parquet  608774682136543231_5.parquet  608774682153320447_11.parquet  608774682153320447_5.parquet  608774682337869823_5.parquet  608774682354647039_5.parquet  (+12023 more)
charts/clickhouse/: Chart.yaml  values.yaml
charts/nats/: .helmignore  Chart.yaml  values.yaml
charts/nats/templates/: lb.yaml
charts/pulsar/: .helmignore  Chart.yaml  values.yaml
datasets/: generated_tasks.json  sample_hexagons.json  sample_import_tasks.json
docs/: OFFLINE_WORKFLOW.md  SERVICE_TYPES.md
mlruns/0/: meta.yaml
mlruns/990723751007288574/: meta.yaml
prototype/: README.md  config.json  pipeline.py  requirements.txt
prototype/api/: app.py
prototype/sample_data/: trips.csv
scripts/: generate_sample_dataset.py  process_csv_data.py
src/pulsar/: cli.py  clickhouse_nats.py
templates/: forecast.html
(+82 files in other folders)
